--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="ctrlmania">
       <h1 class="h1">CTRLMANIA</h1>
       <p class="star">⛧</p>
+      <a class="enter" href="despair.html">ENTER</a>
     </div>
   
   </body>
