--- a/despair/index.html
+++ b/despair/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles2.css">
+    <link rel="stylesheet" href="despair/styles2.css">
     <link rel="icon" type="image/x-icon" href="images/ctrlmania.jpg">
     <title>chronic despair</title>
   </head>
